--- a/AdventOfCode/AdventOfCode.vcxproj
+++ b/AdventOfCode/AdventOfCode.vcxproj
@@ -127,18 +127,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DayFive\DayFive.cpp" />
+    <ClCompile Include="DayFour\DayFour.cpp" />
     <ClCompile Include="DayOne\DayOne.cpp" />
     <ClCompile Include="DayThree\DayThree.cpp" />
     <ClCompile Include="DayTwo\DayTwo.cpp" />
     <ClCompile Include="source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DayFive\DayFive.h" />
+    <ClInclude Include="DayFour\DayFour.h" />
     <ClInclude Include="DayOne\DayOne.h" />
     <ClInclude Include="DayThree\DayThree.h" />
     <ClInclude Include="DayTwo\DayTwo.h" />
     <ClInclude Include="Helpers.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="Assets\DayFive.txt" />
     <Text Include="Assets\DayOne.txt" />
     <Text Include="Assets\DayThree.txt" />
     <Text Include="Assets\DayTwo.txt" />
