--- a/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="DayThree\DayThree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DayFour\DayFour.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DayFive\DayFive.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DayOne\DayOne.h">
@@ -41,6 +47,12 @@
     <ClInclude Include="DayThree\DayThree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayFour\DayFour.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DayFive\DayFive.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Assets\DayOne.txt">
@@ -50,6 +62,9 @@
       <Filter>Resource Files</Filter>
     </Text>
     <Text Include="Assets\DayThree.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="Assets\DayFive.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
